# clawborg

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VERSIONING.md
.claude/: settings.json
.github/workflows/: ci.yml
crates/clawborg/: Cargo.toml
crates/clawborg/src/: cache.rs  clawborg_config.rs  main.rs  server.rs  types.rs  ui.rs  watcher.rs  ws.rs
crates/clawborg/src/openclaw/: alerts.rs  config.rs  cron.rs  health.rs  mod.rs  sessions.rs  usage.rs  workspace.rs
crates/clawborg/src/routes/: agents.rs  alerts.rs  config.rs  crons.rs  files.rs  health.rs  mod.rs  sessions.rs  tasks.rs  usage.rs
docs/: BRIEF.md
fixtures/: README.md
fixtures/mock-openclaw/: .env.example  openclaw.json
fixtures/mock-openclaw/agents/coder/sessions/: agent:coder:cli:local.jsonl  agent:coder:cron:codereview.jsonl  sessions.json
fixtures/mock-openclaw/agents/main/sessions/: agent:main:cron:heartbeat.jsonl  sessions.json  (+1 more)
fixtures/mock-openclaw/cron/: jobs.json
fixtures/mock-openclaw/workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
fixtures/mock-openclaw/workspace-coder/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md
fixtures/mock-openclaw/workspace-coder/memory/: 2026-02-27.md
fixtures/mock-openclaw/workspace-writer/: AGENTS.md  IDENTITY.md  SOUL.md
fixtures/mock-openclaw/workspace/memory/: 2026-02-28.md  2026-03-01.md
scripts/: setup.sh
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: PageLayout.tsx
web/src/hooks/: useAgents.ts  useWebSocket.ts
web/src/lib/: types.ts
web/src/pages/: AgentDetail.tsx  Config.tsx  Crons.tsx  Dashboard.tsx  Health.tsx  Sessions.tsx  Usage.tsx
(+6 files in other folders)
