[workspace]
members = ["crates/clawborg"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/clawborg/clawborg"
homepage = "https://clawborg.dev"
description = "The fast, single-binary dashboard for OpenClaw AI agent fleets"
readme = "README.md"
keywords = ["openclaw", "ai-agents", "dashboard", "monitoring", "cli"]
categories = ["command-line-utilities", "development-tools"]
